# PyBoard

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2026-05-15_0001_initial_pyboard_schema.py  2026-05-15_0002_remove_unused_security_settings.py
app/: __init__.py
app/admin_ui/: __init__.py  auth.py  coupons.py  dashboard.py  deps.py  forms.py  giftcards.py  invite.py  knowledge.py  notices.py  ops.py  orders.py  payments.py  plans.py  router.py  servers.py  settings.py  tickets.py  users.py
app/controllers/: __init__.py  account.py  admin_ui.py  auth.py  comm.py  coupon.py  giftcard.py  invite.py  knowledge.py  notice.py  order.py  payment.py  plan.py  server.py  staff.py  subscribe.py  ticket.py  user.py
app/core/: __init__.py  cache.py  config.py  database.py  deps.py  error_handlers.py  exceptions.py  (+4 more)
docs/: deployment.md  development.md
frontend/: README.md  biome.json  next.config.js  package.json  pnpm-lock.yaml  react-mui-sidebar.d.ts  tsconfig.json
tests/: conftest.py  factories.py  test_account_comm_admin_api.py  test_admin_datetime.py  test_admin_server_api.py  test_admin_stat_system_api.py  test_admin_ui.py  test_auth.py  test_business_modules_api.py  test_knowledge_api.py  test_log_event.py  test_maintenance_jobs.py  test_notice_api.py  test_order_api.py  test_payment_gateway_base.py  test_plan_api.py  test_queue_jobs.py  test_server_v2_api.py  test_setting_api.py  test_setting_seed.py  test_smoke.py  test_subscribe_api.py  test_turnstile.py  test_uniproxy_api.py  test_user_api.py
(+346 files in other folders)
