[project]
name = "pyboard"
version = "0.1.0"
description = "PyBoard FastAPI backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=4.1.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "msgpack>=1.1.2",
    "orjson>=3.11.9",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.38",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra -q"
